analysis/low-level-api-fir/testData/lazyResolve/errors/parameterNoType.kt
sealed class A {
    internal abstract fun absFun(x<caret>x:)
}